--- a/src/scripts/data/assets/sc4evermore/18-reward.yaml
+++ b/src/scripts/data/assets/sc4evermore/18-reward.yaml
@@ -4,7 +4,7 @@ assets:
     authors:
       - Girafe
     category: 18-reward
-    downloads: 353
+    downloads: 354
     lastModified: 2024-01-22T17:20:29.000Z
     name: BSC-VIP Girafe-Mattb325 Moscow Christ The Saviour Cathedral
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Icon_Grfe_CTS_s.jpg
@@ -14,11 +14,21 @@ assets:
     authors:
       - Rayden
     category: 18-reward
-    downloads: 13
+    downloads: 29
     lastModified: 2025-01-07T23:51:01.000Z
     name: BSC Rayden Rural Mayor House
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/RMH_day.jpg
     url: https://www.sc4evermore.com/index.php/downloads/download/18-reward/327-bsc-rayden-rural-mayor-house
+  sc4evermore/328:
+    assetId: sc4evermore/328-itc-cas-greenacre-embassy
+    authors:
+      - CasperVg
+    category: 18-reward
+    downloads: 5
+    lastModified: 2025-01-10T00:16:28.000Z
+    name: ITC CAS Greenacre Embassy
+    thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Embassy_1.jpg
+    url: https://www.sc4evermore.com/index.php/downloads/download/18-reward/328-itc-cas-greenacre-embassy
 
 meta:
-  timestamp: 2025-01-08T11:24:26.356Z
+  timestamp: 2025-01-10T09:30:55.357Z
